fix sticky not being at the bottom if content was too tall

--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,10 @@ body, #app {
     margin: 0;
     padding: 0;
     color: #1a1a1a;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    min-height: 100%;
 }
 
 ::selection {
